# VoxelEngine

./: .gitignore  Block.cpp  Block.h  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Camera.h  Chunk.cpp  Chunk.h  ChunkMesh.cpp  Makefile  Shader.h  TerrainGenerator.cpp  TerrainGenerator.h  VoxelEngine.cpp  VoxelEngine.sln  VoxelEngine.vcxproj  VoxelEngine.vcxproj.filters  World.cpp  World.h  cmake_install.cmake  emscripten_toolchain.cmake  imgui.ini  vcpkg.json
Resources/Shaders/: debug.frag  hole.frag  hole.vert  main.frag  main.vert  screen.frag  screen.vert  test.frag  test.vert
dependencies/glad/include/glad/: gl.h
dependencies/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_widgets.cpp
include/: Block.h  Camera.h  Chunk.h  ChunkMesh.h  World.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: AssetLoader.cpp  AssetLoader.h  AsyncCircularQueue.cpp  AsyncCircularQueue.h  Block.cpp  Block.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkMesh.cpp  Common.h  DebugMenu.cpp  DebugMenu.h  Debugging.cpp  Debugging.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderResources.h  TerrainGenerator.cpp  Test.h  ThreadPool.cpp  ThreadPool.h  VoxelEngine.cpp  VoxelEngine.h  World.cpp  World.h  main.cpp
